<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_advert_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/lost_found_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lost_or_found"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/lost_found_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lost_found_label"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/lost_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost" />

        <RadioButton
            android:id="@+id/found_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found" />

    </RadioGroup>

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lost_found_radio_group"
        android:layout_marginTop="15dp"
        android:text="@string/item_name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_label"
        android:inputType="text" />

    <TextView
        android:id="@+id/numbers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_edit_text"
        android:layout_marginTop="16dp"
        android:text="@string/number"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/numbers_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numbers_label"
        android:inputType="phone" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numbers_edit_text"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_label"
        android:inputType="textMultiLine"
        android:lines="4" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_edit_text"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/date_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_label"
        android:inputType="textShortMessage|text"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_edit_text"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textStyle="bold" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/location_auto_complete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_label"
        android:inputType="text"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>

    <Button
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="113dp"
        android:text="Get Current Location" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:text="Submit" />
</RelativeLayout>

